--- a/index.css
+++ b/index.css
@@ -29,11 +29,29 @@ hr {
 
 .left-column {
     padding-right: 20px;
+    display: flex;
 }
 
 .img {
     height: 500px;
     width: 500px;
+}
+
+.sidebar-img {
+    display: flex;
+    flex-direction: column;
+    margin-right: 25px;
+}
+
+.side-img {
+    height: 42px;
+    width: 42px;
+    margin-bottom: 10px;
+    border: 1px solid #a2a6ac;
+}
+
+.img-selected {
+    border: 1px solid rgb(231, 118, 0);
 }
 
 .stock {
