--- a/index.css
+++ b/index.css
@@ -3,16 +3,14 @@ body {
 }
 
 .nav-bar {
+    position: relative;
     background-color: #232f3e;
     width: 100%;
     height: 50px;
 }
 
-#app {
-    padding: 20px;
-}
-
 .product {
+    padding: 20px;
     display: flex;
 }
 
@@ -92,4 +90,45 @@ hr {
     display: flex;
     flex-direction: column;
     padding-left: 15px;
+}
+
+.cart {
+    position: absolute;
+    right: 15px;
+    bottom: 5px;
+    color: white;
+    font-weight: bold;
+}
+
+.cart > img {
+    width: 38px;
+    height: 26px;
+}
+
+.amount {
+    color: #f08804;
+    position: absolute;
+    left: 10px;
+    top: -5px;
+    text-align: center;
+    min-width: 25px;
+}
+
+.right-column {
+    padding-left: 20px;
+    display: flex;
+}
+
+.add-to-cart {
+    background: linear-gradient(to bottom,#f7dfa5,#f0c14b);
+    border-color: #a88734 #9c7e31 #846a29;
+    border-radius: 3px;
+    color: #111;
+    width: 237px;
+    height: 31px;
+}
+
+.add-to-cart:hover {
+    border-color: #a88734 #9c7e31 #846a29;
+    background: linear-gradient(to bottom,#f5d78e,#eeb933);
 }
